# world-cup-sweepstake

./: .env.example  .gitignore  .prettierignore  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
context/: 00-documentation-instructions.md  00-index.md  00-project-complete-overview.md  01-project.md  02-tech-stack.md  03-app-architecture.md  04-local-development.md  05-deployment.md  06-vercel-supabase-infrastructure.md  07-database.md  08-security.md  09-coding-conventions.md
context-old/implementations/: 10-admin-results-entry-implementation.md  11b-wc2026-and-knockout-sampling-implementation.md
context-old/plan/: 14-admin-reset-and-rules.md
context-old/python/: 01-python-setup.md
context-old/usuarios/: 02-admin.md
context/archive/: README.md
context/data/: README.md  seeding-and-master-data.md
context/fixtures/: octavos.json
context/implementations/: 00-implementation-index.md  02-project-setup-implementation.md  03-supabase-local-and-migrations-implementation.md  04-database-schema-implementation.md  06-seed-and-import-master-data-implementation.md  07-admin-fixtures-implementation.md  08-initial-predictions-implementation.md  09-match-predictions-implementation.md  10-admin-results-entry-implementation.md  11-scoring-engine-implementation.md  11b-wc2026-and-knockout-sampling-implementation.md  12-leaderboards-and-visuals-implementation.md  (+1 more)
documentation/: README.md
prompts/: admin-fixtures-import.md
scripts/: recalc-tournament.ts
src/: proxy.ts
supabase/: config.toml
(+303 files in other folders)
